FIX: Header Logo Width on Mobile Device

--- a/css/header.css
+++ b/css/header.css
@@ -46,9 +46,9 @@
   max-width: 200px;
 }
 
-@media screen and (max-width: 912px) {
+@media screen and (max-width: 720px) {
   .header-logo-scrolled {
-    max-width: 100px;
+    max-width: 130px;
   }
 }
 
